# polkadot-registrar-challenger

./: .gitignore  Cargo.toml  README.md  config.example.yaml
config/: sample.adapter_listener.yaml
src/: admin.rs  base.rs  blockchain.rs  connector.rs  database.rs  display_name.rs  lib.rs  main.rs  matrix.rs  notifier.rs  primitives.rs  registrar.rs  watcher.rs
src/adapters/: email.rs  matrix.rs  mod.rs  twitter.rs
src/api/: display_name_check.rs  judgement_state.rs  mod.rs  second_challenge.rs
src/listener/: admin.rs  matrix.rs  mod.rs
src/tests/: api_judgement_state.rs  display_name_verification.rs  explicit.rs  live_mocker.rs  mod.rs  process_admin_cmds.rs
