[package]
name = "registrar"
version = "0.3.4"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "registrar"
path = "src/bin/main.rs"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.38.0", features = ["macros", "time", "process", "rt-multi-thread" ] }
futures = "0.3.30"
mongodb = "2.8.2"
bson = "2.11.0"
urlencoding = "2.1.3"
async-trait = "0.1.80"
actix = { version = "0.13.5", features = ["macros"]}
actix-web = "4.8.0"
actix-broker = "0.4.3"
actix-codec = "0.5.2"
actix-web-actors = "4.3.0"
awc = "3.5.0"
thiserror = "1.0.61"
anyhow = "1.0.86"
serde = "1.0.203"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
matrix-sdk = "0.7.1"
native-tls = "0.2.12"
hmac = "0.12.1"
sha-1 = "0.10.1"
sha2 = "0.10.8"
url = "2.5.2"
rand = "0.8.5"
hex = "0.4.3"
strsim = "0.10.0"

[dev-dependencies]
actix-http = "3.8.0"
