[package]
name = "challenger"
version = "0.3.4"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "challenger"
path = "src/bin/main.rs"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
actix = { version = "0.13.5", features = ["macros"]}
anyhow = "1.0.86"
serde = "1.0.203"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
matrix-sdk = "0.7.1"
tokio = "1.39.2"
