[package]
name = "challenger"
version = "0.3.4"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
anyhow = "1.0.86"
serde = "1.0.203"
serde_json = "1.0.120"
matrix-sdk = "0.7.1"
tokio = { version = "1", features = ["full"] }
toml = "0.8.16"
